deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-github-app
  labels:
    app: ml-github-app
spec:
  replicas: 9
  selector:
    matchLabels:
      app: ml-github-app
  template:
    metadata:
      labels:
        app: ml-github-app
    spec:
      containers:
      - name: frontend
        image: gcr.io/github-probots/label-bot-frontend
        command: ["python", "app.py"]
        workingDir: "/flask_app"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 3
        ports:
        - containerPort: 443
        - containerPort: 80
        - containerPort: 3000
        volumeMounts:
        - name: user-gcp-sa
          mountPath: /var/secrets/google
        - name: github-app
          mountPath: /var/secrets/github
      volumes:
      - name: user-gcp-sa
        secret:
          secretName: user-gcp-sa
      - name: github-app
        secret:
          secretName: github-app
