deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-github-app
  labels:
    app: ml-github-app
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: ml-github-app
  type: NodePort
